# FXpilot.

./: .gitignore  README.md
backtesting/: 1.ipynb
fx_screen/: main.py  pyproject.toml  requirements.txt  screener.py  settings_handler.py  settings_schema.yaml  utils.py  view_screener_settings.py
fx_screen/notebooks/: 1.ipynb
